Fixed some broken css

--- a/public/styles/addRecord.css
+++ b/public/styles/addRecord.css
@@ -4,6 +4,8 @@
   box-sizing: border-box;
 }
 body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    sans-serif;
   background-color: #0e152f;
   color: #0e152f;
   display: flex;
