--- a/public/styles/chat.css
+++ b/public/styles/chat.css
@@ -141,7 +141,7 @@ body {
   #chat-box {
     padding: 2% 0 0 20%;
   }
-  .test {
+  .input-div {
     left: 0;
   }
 }
