--- a/public/styles/recordView.css
+++ b/public/styles/recordView.css
@@ -5,6 +5,8 @@
 }
 
 body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    sans-serif;
   background-color: #0e152f;
   color: #0e152f;
   display: flex;
